# grasp_anything_ch

./: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  Dockerfile  GRASP_CONTACT_README.md  GRASP_RECT_README.md  Makefile  README.md  REMOTE_SETUP_README.md  REMOTE_TRAINING_README.md  compose.yaml  pyproject.toml
deploy/systemd/: grasp-anything.service.in
examples/: client.py
integrations/ggcnn/: run_ggcnn.py
launch/: grasp-anything-ui.sh  locate-ui.sh
locate-anything/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
locate-anything/deploy/systemd/: locate-anything.service.in
locate-anything/examples/: client.py
locate-anything/scripts/: download_model.py  index.html  install_user_service.sh  serve_ui.py
locate-anything/src/locate_anything_service/: __init__.py  api.py  cli.py  config.py  middleware.py  model.py  parser.py  prompts.py  schemas.py  visualization.py
locate-anything/tests/: test_api.py  test_cli.py  test_config.py  test_middleware.py  test_model.py  test_parser.py  test_prompts.py
report/: adaptations.md  report.tex
scripts/: bootstrap.sh  index.html  install_user_service.sh  models.json  serve_ui.py
src/locate_anything_service/: __init__.py  api.py  cli.py  collision_2d.py  config.py  grasp_geometry.py  grasp_rect_geometry.py  model.py  parser.py  preflight.py  prompts.py  schemas.py  visualization.py
tests/: test_api.py  test_cli.py  test_collision_2d.py  test_config.py  test_contact_data_bridge.py  test_contact_decode.py  test_contact_loss.py  test_download_model.py  test_evaluation_helpers.py  test_grasp_geometry.py  test_grasp_rect_data_bridge.py  test_grasp_rect_decode.py  test_grasp_rect_geometry.py  test_grasp_rect_loss.py  test_model.py  test_parser.py  test_phase_transition.py  test_preflight.py  test_prompts.py  test_realvlg_contact_pipeline.py  test_realvlg_grasp_pipeline.py  test_serve_ui.py  test_stream_data_sharding.py  test_training_environment.py  test_training_meta_contact.py  test_training_tools.py
train/: README.md  train.sh
train/configs/: locateanything_voc_lora.env
train/data/: voc_train_meta.example.json  voc_train_meta.json  voc_train_stats.json
train/patches/: locateanything-single-gpu-sdpa.patch
train/run/: full_train.unit
train/scripts/: convert_pascal_voc.py  evaluate_voc2007.py  train_locateanything_lora.sh  validate_training_meta.py
training/: EAGLE_REVISION  README.md  train.sh
training/configs/: grasp_anything_realvlg_contact.env  locateanything_voc_lora.env  (+2 more)
(+49 files in other folders)
