[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "grasp-anything"
version = "0.1.0"
description = "Language-guided 2D contact grasping built on NVIDIA LocateAnything-3B"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "pillow==11.1.0",
  "pydantic==2.7.1",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
model = [
  "accelerate==1.5.2",
  "decord==0.6.0",
  "einops==0.8.2",
  "huggingface-hub==0.36.2",
  "lmdb==2.2.1",
  "numpy==1.26.4",
  "opencv-python-headless==4.11.0.86",
  "packaging==26.0",
  "peft==0.12.0",
  "safetensors==0.8.0",
  "sentencepiece==0.2.0",
  "timm==1.0.27",
  "torch==2.5.1",
  "torchvision==0.20.1",
  "transformers==4.57.1",
]
training = [
  "bitsandbytes==0.49.2",
  "deepspeed==0.15.4",
  "ninja==1.13.0",
  "psutil==7.2.2",
  "tensorboard==2.21.0",
]
dev = [
  "httpx==0.24.0",
  "pytest==8.4.1",
  "ruff==0.12.8",
]

[project.scripts]
grasp-anything = "locate_anything_service.cli:main"
locate-anything = "locate_anything_service.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
