[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "locate-anything-service"
version = "0.1.0"
description = "Production API and CLI deployment for NVIDIA LocateAnything-3B"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "fastapi==0.116.1",
  "pillow==11.1.0",
  "pydantic==2.11.7",
  "python-multipart==0.0.20",
  "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
model = [
  "decord==0.6.0",
  "lmdb==1.7.5",
  "numpy==1.25.0",
  "opencv-python-headless==4.11.0.86",
  "peft>=0.17,<0.18",
  "torch==2.8.0",
  "torchvision==0.23.0",
  "transformers==4.57.1",
]
dev = [
  "httpx==0.28.1",
  "pytest==8.4.1",
  "ruff==0.12.8",
]

[project.scripts]
locate-anything = "locate_anything_service.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
